--- a/public/event-simulator.html
+++ b/public/event-simulator.html
@@ -11,7 +11,10 @@
  
 	<script>
 	  var socket = io.connect('http://localhost');
-	  socket.on('news', function (data) {
+	  socket.on('init', function (data) {
+	    console.log(JSON.stringify(data));
+	  });
+	  socket.on('event', function (data) {
 	    console.log(JSON.stringify(data));
 	  });
 	</script>
